--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node ./app/server.ts",
+    "dev": "nodemon",
     "start": "node ./dist/server.js",
     "dev-simple": "nodemon --exec ts-node ./app/server-simple.ts",
     "start-simple": "node ./dist/server-simple.js",
